BUG#23655 deadlock in query cache ndb_cache tests with --debug

Deadlock when running ndb_cache tests with --debug. Query cache locks on trying
to acquire lock.